--- a/assets/template-2/css/style.css
+++ b/assets/template-2/css/style.css
@@ -321,7 +321,7 @@ span.item-count {
 .single-slide-item {
     height: 100vh;
     background-size: cover;
-    background-position: center center;
+    background-position: right center;
 }
 
 .slider-content {
