--- a/themforest-upload/Template/Gini-eCom/product-details.html
+++ b/themforest-upload/Template/Gini-eCom/product-details.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/template-2/images/favicon.png">
 
 
     <!-- all css here -->
